# serialization

./: '  Cargo.toml  README.md  result.txt  rustc-ice-2024-12-11T03_06_03-79887.txt  rustc-ice-2024-12-11T03_06_06-79891.txt  rustc-ice-2024-12-11T03_06_08-79897.txt  rustc-ice-2024-12-11T03_06_12-79953.txt  rustc-ice-2024-12-11T03_06_14-79955.txt  rustc-ice-2024-12-11T03_06_16-79958.txt  rustc-ice-2024-12-11T03_06_28-80073.txt  rustc-ice-2024-12-11T03_06_55-80159.txt  rustc-ice-2024-12-11T03_09_05-80370.txt  rustc-ice-2024-12-11T03_09_06-80374.txt  rustc-ice-2024-12-11T03_09_07-80379.txt  rustc-ice-2024-12-12T03_09_37-46140.txt  rustc-ice-2024-12-12T03_09_37-46243.txt  rustc-ice-2024-12-12T03_09_37-46298.txt  rustc-ice-2024-12-12T03_09_40-46308.txt  rustc-ice-2024-12-12T03_09_44-46314.txt  rustc-ice-2024-12-12T03_09_46-46322.txt  rustc-ice-2024-12-12T03_09_48-46330.txt  rustc-ice-2024-12-12T03_09_48-46342.txt  rustc-ice-2024-12-12T03_09_55-46348.txt  rustc-ice-2024-12-12T03_09_55-46352.txt  rustc-ice-2024-12-12T03_09_55-46355.txt  rustc-ice-2024-12-12T03_10_04-46366.txt  rustc-ice-2024-12-12T03_10_05-46373.txt  rustc-ice-2024-12-12T03_10_06-46379.txt  rustc-ice-2024-12-12T03_10_06-46382.txt  rustc-ice-2024-12-12T03_10_07-46386.txt  rustc-ice-2024-12-12T03_10_08-46390.txt  rustc-ice-2024-12-12T03_10_09-46395.txt  rustc-ice-2024-12-12T03_10_09-46399.txt  rustc-ice-2024-12-12T03_10_10-46403.txt  rustc-ice-2024-12-12T03_10_11-46409.txt  rustc-ice-2024-12-12T03_10_11-46412.txt  rustc-ice-2024-12-12T03_10_12-46415.txt  rustc-ice-2024-12-12T03_10_14-46426.txt  rustc-ice-2024-12-12T03_10_15-46433.txt  (+95 more)
.cargo/: config.toml
.github/workflows/: bench.yml
benches/: divan.rs  iai.rs  sandbox.rs  sandbox.rs.backup2  sandbox.rs3.backup3  sandbox2.rs
core/: Cargo.toml
core/src/: descriptor.rs  lib.rs  traits.rs
core/src/derive/: arrayvec.rs  mod.rs  nonmax.rs  num.rs  std.rs  tup.rs  vec.rs
derive/: Cargo.toml
derive/src/: coder.rs  lib.rs  serial.rs  shared.rs  state.rs
descriptor/: Cargo.toml
descriptor/src/: lib.rs
impl/: Cargo.toml
impl/src/: lib.rs
minecraft/: Cargo.toml
minecraft/src/: lib.rs
serialization_default_binary_encoder/: Cargo.toml
serialization_default_binary_encoder/src/: coder.rs  lib.rs
serialization_derive/: Cargo.toml
serialization_derive/src/: lib.rs
serialization_minecraft/: Cargo.toml
serialization_minecraft/src/: lib.rs
serialization_nbt/: Cargo.toml
serialization_nbt/src/: lib.rs
src/: benches.rs  binary_format.rs  buffer.rs  codec.rs  coder.rs  descriptor.rs  endian.rs  fuzz.rs  impls.rs  lib.rs  macros.rs  main  main.rs  mock.rs  traits.rs
src/codec/: bin.rs  mod.rs  traits.rs
src/derive/: array.rs  arrayvec.rs  mod.rs  num.rs  option.rs  std.rs  str.rs  tup.rs  unit.rs  uuid.rs  varint.rs  vec.rs
src/mesh/: actor.rs  compound.rs  edge.rs  end.rs  enum.rs  field.rs  flatten.rs  fuzz.rs  impls.rs  instance.rs  leaf.rs  len.rs  macros.rs  mesh.rs  mod.rs  order.rs  pad.rs  padding.rs  segment.rs  size.rs  sort.rs  tag.rs  vectored.rs
src/mesh/actor/: encode.rs
src/mesh/add/: compound.rs  mod.rs  order.rs
src/mesh/node/: edge.rs  end.rs  leaf.rs  mod.rs
tests/: a.rs  expand.rs  expand_sandbox.rs  expanded.rs  expanded_sandbox.rs  fuzz.rs  generic_const_exprs.rs  model.rs  sandbox.rs  sandbox0.rs  sandbox2.rs  sandbox3.rs  sandbox4.rs  split_at.rs  ss.rs  temp.rs  temp2.rs  temp3.rs  temp4.rs  test11.rs  test2.rs  test_drop.rs
tests2/: ss.rs  w.rs
testsw/: sandbox.rs  sandbox2.rs  temp2.rs  temp3.rs
