[workspace]
members = [
    "serialization_derive",
    "serialization_default_binary_encoder",
]

[package]
name = "serialization"
version = "0.1.0"
edition = "2024"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/serialization"
license = "MIT"
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]


[dependencies]
typenum = { version = "1.17.0", features = ["const-generics"] }
serialization_derive = { path = "./serialization_derive" }

[dev-dependencies]
serialization_default_binary_encoder = { path = "./serialization_default_binary_encoder" }

[profile.bench]
strip = true
lto = true
codegen-units = 1
