[package]
name = "serialization"
version = "0.1.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/serialization"
license = "MIT"
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
members = ["serialization_derive"]

[dependencies]
typenum = { version = "1.17.0", features = ["const-generics"] }
serialization_derive = { path = "./serialization_derive" }

[dev-dependencies]
bitcode = "0.6.3"

[features]
default = ["bin"]
bin = []

[profile.release]
strip = false
lto = true
codegen-units = 1
