[package]
name = "serialization_core"
version.workspace = true  
edition.workspace = true
author.workspace = true 
description.workspace = true
repository.workspace = true 
license.workspace = true
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
fastbuf = { version = "0.43.0", features = ["const-trait", "impl_copy_for_buffer"] }
fastvarint = "0.22.0"
concat-idents-bruce0203 = "1.1.6"
seq-macro = "0.3.5"
const_for = "0.1.5"
nonmax = "0.5.5"

[features]
default = ["std"]
std = []
