[package]
name = "serialization_derive"
version = "0.2.13"
edition = "2021"
description = ""
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/serialization"
license = "MIT"

[features]
default = ["std"]
std = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.68", features = ["full"] }
proc-macro2 = "1.0.86"

