[package]
name = "serialization_derive"
version = "0.1.0"
edition = "2021"
description = "#[derive(Serializable)] for serialization"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/serialization"
license = "MIT"
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = ["std"]
std = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.68", features = ["full"] }
proc-macro2 = "1.0.86"
