[package]
name = "serialization_minecraft"
version.workspace = true  
edition.workspace = true
author.workspace = true 
description.workspace = true
repository.workspace = true 
license.workspace = true
readme = "../README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
fastbuf = "0.26.0"
fastvarint = "0.22.0"
serialization = { path = "../", version = "0.1.6" }
concat-idents = "1.1.5"
